# structured-output

./: .gitignore  README.md  pyproject.toml
fixtures/briefs/: 01-coffee-subscription.md  02-employee-engagement.md  03-ev-brand-tracker.md  04-political-poll.md  05-telehealth-satisfaction.md
src/structured_output/: config.py  extraction.py  provider.py  schema.py
src/structured_output/techniques/: prompted_json.py  tool_use.py
tests/: test_config.py  test_fixtures.py  test_prompted_json.py  test_provider.py  test_schema.py  test_smoke.py  test_tool_use.py
